# CocosExplorer

./: .gitignore  .gitmodules  CMakeLists.txt  CocosExplorer.sln  CocosExplorer.vcxproj  CocosExplorer.vcxproj.filters  LICENSE  README.md  dllmain.cpp  mod.json  pch.h
cappuccino-sdk/incl/cocos2dx/platform/win32/: CCPlatformDefine.h
libraries/imgui-hook/: CMakeLists.txt  imgui-hook.cpp  imgui-hook.hpp
opengl-imgui-hook/: LICENSE  imgui_hook.cpp  imgui_hook.h
opengl-imgui-hook/kiero/: kiero.cpp
src/: main.cpp  utils.hpp
